--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,27 +1,38 @@
-@import '../../common/colors.scss';
+@import "../../common/colors.scss";
 
 .card-item {
     background: $secondary-color;
     cursor: pointer;
+    transition: all 0.3s;
+    min-height: 460px;
+    height: 100%;
+    margin: 10px;
+
+    &:hover {
+        transform: scale(1.1);
+        transition: all 0.3s;
+    }
 }
 
-.card-top{
+.card-top {
     height: 300px;
-    img{
+
+    img {
         width: 100%;
         height: 100%;
     }
 }
 
+.card-bottom {
+    padding: 20px;
+}
+
 .card-info {
     color: $primary-font;
-    h4{
+
+    h4 {
         font-size: 22px;
         font-weight: 400;
         margin-bottom: 10px;
     }
-}
-
-.card-bottom {
-    padding: 20px;
 }
