Modifyed PNF, header and footer components

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -12,6 +12,7 @@
         font-size: 24px;
         font-weight: 600;
         cursor: pointer;
+        text-shadow: 0.5px 2px 3px #9e9c9c;
         transition: 0.5s;
         &:hover{
             transform: scale(1.02);
@@ -30,25 +31,55 @@
     width: 50%;
     display: flex;
     justify-content: center;
-
     form {
         display: flex;
         justify-content: center;
         width: 70%;
-
         button {
             padding: 0px 8px;
             font-size: 20px;
             cursor: pointer;
             height: 38px;
+            color: #0d6efd;
+            background-color: $primary-color;
+            border: none;
+            box-shadow: 0px 0px 7px 0px #5e5e5e;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
         }
     }
 
     input {
+        background-color: $primary-color;
         font-size: 18px;
         width: 100%;
         padding: 5px 5px 5px 10px;
         height: 38px;
         outline: none;
+        border: none;
+        color: $primary-font;
+        box-shadow: 0px 0px 7px 0px #5e5e5e;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
     }
+}
+
+
+@media screen and (max-width: 768px) {
+    .user-image,
+        .user-image img {
+            display: none;
+        }
+        .search-bar{
+            width: 100%;
+            justify-content: end;
+            form{
+                width: 100%;
+            }
+        }
+        .header{
+            .logo{
+                width: 100%;
+            }
+        }
 }
