--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -15,7 +15,8 @@
         font-weight: 600;
         cursor: pointer;
         transition: 0.5s;
-
+        text-shadow: 0.5px 2px 3px #9e9c9c;
+        
         &:hover {
             transform: scale(1.02);
         }
