--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -7,6 +7,8 @@
     min-height: 460px;
     height: 100%;
     margin: 10px;
+    border-radius: 7px;
+    overflow: hidden;
 
     &:hover {
         transform: scale(1.1);
