Modified Movie listing and PNF component

--- a/src/components/movie-listing/movie-listing.scss
+++ b/src/components/movie-listing/movie-listing.scss
@@ -20,8 +20,6 @@
     }
 }
 
-// .movie-container {
-//     display: grid;
-//     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-//     grid-gap: 15px;
-// }
+.movie-wrapper {
+    min-height: 80vh;
+}
