--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,6 +8,7 @@
     align-items: center;
     color: $primary-font;
     flex-direction: column;
+    text-align: center;
 
     .logo {
         color: $primary-font;
